feat: Rsync 插件
