# docs/swagger.json
@@ -1288,7 +1288,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/panel_app_http_requests_website.Add"
+                            "$ref": "#/definitions/requests.Add"
                         }
                     }
                 ],
@@ -1689,40 +1689,6 @@
                     }
                 }
             },
-            "put": {
-                "security": [
-                    {
-                        "BearerToken": []
-                    }
-                ],
-                "description": "更新 Rsync 模块",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "插件-Rsync"
-                ],
-                "summary": "更新模块",
-                "parameters": [
-                    {
-                        "description": "request",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/panel_app_http_requests_plugins_rsync.Update"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/controllers.SuccessResponse"
-                        }
-                    }
-                }
-            },
             "post": {
                 "security": [
                     {
@@ -1744,7 +1710,50 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/panel_app_http_requests_plugins_rsync.Add"
+                            "$ref": "#/definitions/requests.Create"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.SuccessResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/plugins/rsync/modules/{name}": {
+            "post": {
+                "security": [
+                    {
+                        "BearerToken": []
+                    }
+                ],
+                "description": "更新 Rsync 模块",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "插件-Rsync"
+                ],
+                "summary": "更新模块",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "模块名称",
+                        "name": "name",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "request",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/panel_app_http_requests_plugins_rsync.Update"
                         }
                     }
                 ],
@@ -1776,7 +1785,7 @@
                         "type": "string",
                         "description": "模块名称",
                         "name": "name",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -2134,29 +2143,6 @@
                 }
             }
         },
-        "panel_app_http_requests_plugins_rsync.Add": {
-            "type": "object",
-            "properties": {
-                "auth_user": {
-                    "type": "string"
-                },
-                "comment": {
-                    "type": "string"
-                },
-                "hosts_allow": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "path": {
-                    "type": "string"
-                },
-                "secret": {
-                    "type": "string"
-                }
-            }
-        },
         "panel_app_http_requests_plugins_rsync.Update": {
             "type": "object",
             "properties": {
@@ -2209,7 +2195,7 @@
                 }
             }
         },
-        "panel_app_http_requests_website.Add": {
+        "requests.Add": {
             "type": "object",
             "properties": {
                 "db": {
@@ -2302,6 +2288,29 @@
                 },
                 "website_id": {
                     "type": "integer"
+                }
+            }
+        },
+        "requests.Create": {
+            "type": "object",
+            "properties": {
+                "auth_user": {
+                    "type": "string"
+                },
+                "comment": {
+                    "type": "string"
+                },
+                "hosts_allow": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "path": {
+                    "type": "string"
+                },
+                "secret": {
+                    "type": "string"
                 }
             }
         },
